Updates about me

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE=html>
+<!DOCTYPE html>
 <title> Loni Tra </title>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,18 +27,22 @@
           <img class="profile" src = "loni.jpg" alt="Loni">
         </span>
         <main class="bio">
-          <h1 ID="home"> About Me </h1>
+          <h1> About Me </h1>
           <p class = "abme">
             I am a Vietnamese first generation college student at the University of Washington in Seattle going into my third
             year studying computer science. At the university, I am involved with the <a href ="https://www.engr.washington.edu/stars" target="_blank"> STARS engineering program </a> as a member of cohort V
             where I have cultivated a strong sense of belonging & support within this big university and built a strong foundation and understanding of my own learning process.
           </p>
           <p class="abme">
-            This summer, I will be working at Facebook as a <a href ="https://www.facebook.com/careers/FBUEngineering" target="_blank"> Facebook University for Engineering</a> intern in Menlo Park, California where I will be delving into
-            Android app development, challenging myself both professionally to build an innovative app and personally to step out of my comfort zone, and, of course, having tons of fun &#9787;
+            This spring, I will be joining Microsoft as a Software Engineer intern on the C&AI team where I will have my first experience dabbling
+            in large systems and learning to ship quality code. In the summer I will be returning to Facebook
+            where I will experience Facebook's culture in the Seattle office and continue to grow as an aspiring software engineer.
+            Currently, I am a Teaching Assistant for the Paul G. Allen School of Computer Science where I am learning to better communicate
+            computer science topics and grow my perspective from other students. &#9787;
           </p>
         </main>
-        
+      </div>
+
         <div ID="links">
           <a href="https://github.com/lonitra" target="_blank">
             <img src="githublogo.png" class="social" ID="projects">
@@ -49,7 +53,6 @@
             <!-- image from https://freebiesupply.com/logos/linkedin-icon-logo/ -->
           </a>
         </div>
-
         <br></br>
 
         <main class ="break">
@@ -150,7 +153,7 @@
           <p ID="break"> ___________________________________________________________________________________________________________________________________________ </p>
 
           <h3> Education: </h3>
-          <p class="education"> University of Washington, Seattle, WA &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; GPA: 3.83
+          <p class="education"> University of Washington, Seattle, WA
           </p>
           <p class="eduindent">
             Bachelor of Science in Computer Science (Intended) &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Expected: June 2022
@@ -160,9 +163,6 @@
           </ol>
             <ol>
                 &emsp;&emsp;o	Member of highly competitive engineering enrichment program for Washington state students from underserved high &emsp;&emsp;&emsp;schools
-            </ol>
-            <ol>
-                &emsp;&emsp;o	Underwent STARS’s holistic model to build a strong foundation in math and science
             </ol>
           <ol>
             o	Relevant Coursework: Computer Programming I & II
@@ -179,7 +179,7 @@
 
         <main class ="techskills">
           <h3>Technical Skills:</h3>
-          <p class="education"> o	<strong>Languages:</strong> Python (familiar), JavaScript (familiar), HTML/CSS (familiar), Java (proficient)
+          <p class="education"> o	<strong>Languages:</strong> Java (proficient), Python (familiar), JavaScript (familiar), HTML/CSS (familiar)
           </p>
         </main>
 
@@ -239,7 +239,9 @@
           <h3>Projects:</h3>
           <p class="education"><strong> HelpQ </strong></p>
           <p class=eduindent>
-            An Android app that revamps the CodePath training that FBU Engineering interns experience by facilitating 		smoother communication between students and administrators.
+            <strong>
+              An Android app that revamps the CodePath training that FBU Engineering interns experience by facilitating 		smoother communication between students and administrators.
+            </strong>
           </p>
           <p class="eduindent">
             o	Implemented multiple core features within the app e.g. Create Question
@@ -252,7 +254,9 @@
           </p>
           <p class="education"><strong> HERD </strong></p>
           <p class=eduindent>
-            HERD is a web application I made with two other colleagues as a final project for CSSI with a time constraint of a week. HERD offers a visual and a count of people in an area so that traffic can be accounted to manage time effectively.
+            <strong>
+              HERD is a web application I made with two other colleagues as a final project for CSSI with a time constraint of a week. HERD offers a visual and a count of people in an area so that traffic can be accounted to manage time effectively.
+            </strong>
           </p>
           <p class="eduindent">
             o	Utilized Python and Datastore to store and pull user unique ID and location
@@ -265,7 +269,9 @@
           </p>
           <p class="education"><strong> Corgi Adventure </strong></p>
           <p class="eduindent">
-            Corgi Adventure is a game I made on scratch.mit.edu for the entertainment of others.
+            <strong>
+              Corgi Adventure is a game I made on scratch.mit.edu for the entertainment of others.
+            </strong>
           </p>
           <p class="eduindent">
             o	Designed user interface of the game
@@ -283,44 +289,28 @@
         <main class="additionx">
           <h3>Additional Experience:</h3>
           <p class="education">
+            <strong>Paul G. Allen School of Computer Science,</strong> <i> Teaching Assistant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2019 – Present
+          </p>
+          <p class="eduindent">
+            o	Facilitate weekly office hour to aid students in understanding basic programming concepts
+          </p>
+          <p class="eduindent">
+            o	Review and critique lesson plans and assignments to achieve an effective intro CSE curriculum
+          </p>
+          <p class="eduindent">
+            o	Evaluate student work to provide constructive feedback for improvement in student understanding
+          </p>
+          <p class="education">
             <strong>College of Engineering Student Staff,</strong> <i> Engineering Peer Educator </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; April 2018 – December 2018
           </p>
           <p class="eduindent">
             o	Collaborated with three other peers to develop an entire quarter’s worth of curriculum and activities that would best aid incoming freshmen
           </p>
-          <p class="eduindent">
+          <p class="eduindent" ID="photos">
             o	Communicated with Engineering Peer Educator leads for clarification and progress updates
           </p>
           <p class="eduindent">
             o	Facilitated a classroom of 20 students in studying engineering and its interdisciplinary nature
-          </p>
-          <p class="education">
-            <strong>Key Club/National Honor Society,</strong> <i> Member </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2014 – June 2017
-          </p>
-          <p class="eduindent">
-            o	Facilitated a safe and comfortable environment for hundreds of children
-          </p>
-          <p class="eduindent">
-            o	Organized spaces accordingly to be suitable for specific events
-          </p>
-          <p class="eduindent">
-            o	Aided hundreds of families in obtaining necessities
-          </p>
-        </main>
-
-
-        <p ID="break"> ___________________________________________________________________________________________________________________________________________ </p>
-
-        <main class="extra">
-          <h3>Awards & Honors/Extracurrcular Activities:</h3>
-          <p class="education">
-            •	Society of Women in Engineering
-          </p>
-          <p class="education" ID="photos">
-            •	Google Games 2018 3rd place team award
-          </p>
-          <p class="education">
-            •	Mariner Girls Tennis awards (MVP, Co-MVP, Most Wins)
           </p>
         </main>
 
