Updates about me

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           <p class="abme">
             This spring, I will be joining Microsoft as a Software Engineer intern on the C&AI team where I will have my first experience dabbling
             in large systems and learning to ship quality code. In the summer I will be returning to Facebook
-            where I will experience Facebook's culture in the Seattle office and continue to grow as an aspiring software engineer.
-            Currently, I am a Teaching Assistant for the Paul G. Allen School of Computer Science where I am learning to better communicate
+            where I will continue to grow as an aspiring software engineer.
+            Currently, I am a Teaching Assistant for the CSE department where I am learning to better communicate
             computer science topics and grow my perspective from other students. &#9787;
           </p>
         </main>
