--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
           <p class="abme">
             This spring, I will be joining Microsoft as a Software Engineer intern on the C&AI team where I will have my first experience dabbling
             in large systems and learning to ship quality code. In the summer I will be returning to Facebook
-            where I will continue to grow as an aspiring software engineer.
-            Currently, I am a Teaching Assistant for the CSE department where I am learning to better communicate
-            computer science topics and grow my perspective from other students. &#9787;
+            where I will continue to grow as an aspiring software engineer. &#9787;
           </p>
         </main>
       </div>
@@ -123,7 +121,7 @@
     <p>
       HelpQ is an android app I made with my teammates during my Facebook University for
       Engineering (FBU) internship in the summer of 2019. During the first three weeks
-      of the internship, interns go through a three-week mobile development (either android or iOS) bootcamp with
+      of the internship, interns go through a mobile development (either android or iOS) bootcamp with
       CodePath. During the bootcamp, my teammates
       (<a href="https://www.linkedin.com/in/cassandra-cabrera-7b7582159/" target="_blank">Cassandra Cabrera</a>
       &
@@ -156,7 +154,7 @@
           <p class="education"> University of Washington, Seattle, WA
           </p>
           <p class="eduindent">
-            Bachelor of Science in Computer Science (Intended) &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Expected: June 2022
+            Bachelor of Science in Computer Science &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; Expected: March 2022
           </p>
           <ol>
             o	Washington State Academic Redshirt (STARS) Scholar
@@ -165,7 +163,7 @@
                 &emsp;&emsp;o	Member of highly competitive engineering enrichment program for Washington state students from underserved high &emsp;&emsp;&emsp;schools
             </ol>
           <ol>
-            o	Relevant Coursework: Computer Programming I & II
+            o	Relevant Coursework: Computer Programming I & II, Software Design & Implementation, Data Structures & Parallelism, &emsp;&emsp;&emsp;Interaction Programming
           </ol>
           <p class="education">
           Mariner High School, Everett, WA &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; June 2017
@@ -197,7 +195,7 @@
             o	Built own app from scratch in a team of three using Java, Parse, and Android Studio
           </p>
           <p class="eduindent">
-            o	Designed features and UI flow that would best resolve issues app aims to solve
+            o	Designed features and UI flow that would best resolve Facebook University training communication 	issues the app aimed to solve
           </p>
           <p class="education">
             <strong>AccessMap,</strong> <i> Student Researcher </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2018 – March 2019
@@ -214,22 +212,13 @@
           </p>
           <p class="eduindent">
             o	Selected to participate in an intensive programming institute learning web app
-            development in HTML, CSS, JavaScript, Python and Google &emsp;AppEngine from Google engineers
+            development in HTML, CSS, JavaScript, Python and Google &emsp;&emsp;&emsp;AppEngine from Google engineers
           </p>
           <p class="eduindent">
             o	Utilized Python and Datastore to store and pull data for the creation of a web application
           </p>
           <p class="eduindent">
             o	Collaborated with colleagues in order to produce a minimum viable product under a given time constraint
-          </p>
-          <p class="education">
-            <strong>Scratch.mit.edu,</strong> <i> User </i>  &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2016 – June 2017
-          </p>
-          <p class = eduindent>
-            o	Explored basics programming concepts using MIT’s Scratch website as a class medium by programming and debugging various classroom &emsp;assignments
-          </p>
-          <p class=eduindent>
-            o	Applied learned concepts and followed design process to create a game
           </p>
         </main>
 
@@ -244,13 +233,13 @@
             </strong>
           </p>
           <p class="eduindent">
-            o	Implemented multiple core features within the app e.g. Create Question
+            o	Implemented multiple core and stretch features within the app using Java
           </p>
           <p class="eduindent">
             o	Designed & updated UI to improve overall UX
           </p>
           <p class="eduindent">
-            o	Ran tests to ensure stability of app for presentation and client use
+            o	Conducted tests to ensure stability of app for presentation and client use
           </p>
           <p class="education"><strong> HERD </strong></p>
           <p class=eduindent>
@@ -274,7 +263,7 @@
             </strong>
           </p>
           <p class="eduindent">
-            o	Designed user interface of the game
+            o	Designed UI of the game
           </p>
           <p class="eduindent">
             o	Tested game with myself and multiple users for bugs and feedback to improve UX
@@ -289,7 +278,7 @@
         <main class="additionx">
           <h3>Additional Experience:</h3>
           <p class="education">
-            <strong>Paul G. Allen School of Computer Science,</strong> <i> Teaching Assistant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2019 – Present
+            <strong>Paul G. Allen School of Computer Science,</strong> <i> Teaching Assistant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2019 – March 2020
           </p>
           <p class="eduindent">
             o	Facilitate weekly office hour to aid students in understanding basic programming concepts
