--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div ID="wrapper">
       <div>
         <span>
-          <img class="profile" src = "loni.jpg" alt="Loni">
+          <img class="profile" src = "loni.JPG" alt="Loni">
         </span>
         <main class="bio">
           <h1> About Me </h1>
