--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <main class="additionx">
           <h3>Additional Experience:</h3>
           <p class="education">
-            <strong>Paul G. Allen School of Computer Science,</strong> <i> Teaching Assistant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2019 – March 2020
+            <strong>University of Washington,</strong> <i> CSE 190Z Teaching Assistant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2019 – March 2020
           </p>
           <p class="eduindent">
             o	Facilitate weekly office hour to aid students in understanding basic programming concepts
@@ -290,7 +290,7 @@
             o	Evaluate student work to provide constructive feedback for improvement in student understanding
           </p>
           <p class="education">
-            <strong>College of Engineering Student Staff,</strong> <i> Engineering Peer Educator </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; April 2018 – December 2018
+            <strong>University of Washington,</strong> <i> Engineering Peer Educator </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; April 2018 – December 2018
           </p>
           <p class="eduindent">
             o	Collaborated with three other peers to develop an entire quarter’s worth of curriculum and activities that would best aid incoming freshmen
