Change visibility of links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div ID="wrapper">
       <div>
         <span>
-          <img class="profile" src = "loni.JPG" alt="Loni">
+          <img class="profile" src = "loni.jpg" alt="Loni">
         </span>
         <main class="bio">
           <h1> About Me </h1>
@@ -43,13 +43,11 @@
 
         <div ID="links">
           <a href="https://github.com/lonitra" target="_blank">
-            <img src="githublogo.png" class="social" ID="projects">
+            <img src="githublogo.png" class="social"></a>
             <!-- image from http://pngimg.com/download/73390 -->
-          </a>
           <a href="https://www.linkedin.com/in/lonitra/" target="_blank">
-            <img src="linkedinlogo.png" class="social" ID="linkedin">
+            <img src="linkedinlogo.png" class="social" ID="linkedin"></a>
             <!-- image from https://freebiesupply.com/logos/linkedin-icon-logo/ -->
-          </a>
         </div>
         <br></br>
 
@@ -62,7 +60,7 @@
             <img src="corgiadventure.png" alt="Corgi Adventure" class="projectpics">
           </a>
             <section class =projectdescrip>
-            <h2> <a href = "https://scratch.mit.edu/projects/163324351/" target="_blank"> Corgi Adventure</a></h2>
+            <h2> Corgi Adventure </h2>
             <p>
               Corgi Adventure is a cute game I made with Scratch. Although it
               was originally an assignment that was categorized as "for fun" in my high school calculus
@@ -77,11 +75,11 @@
               very sentimental to me in that it
               portrays a significant part of my life as I begin my journey in computer science.
             </p>
+            <p class ="projectlink"> <a href="https://scratch.mit.edu/projects/163324351/" target="=_blank">[Click for Project Details]</a> </p>
           </section>
         </main>
 
-        <br>
-        </br>
+        <br><br><br>
 
 
         <main class="project">
@@ -89,7 +87,7 @@
             <img src="herd.png" alt="HERD" class="projectpics">
           </a>
           <section class ="projectdescrip">
-          <h2> <a href="https://herd-online.appspot.com/" target="_blank"> HERD Online </a> </h2>
+          <h2> HERD Online </h2>
           <p>
             HERD is a my very first group project. It is a web application I made
             with my teammates during my time at
@@ -107,17 +105,18 @@
             a MVP of storing user location and alerting users how many HERDERS or users
             were in their area.
           </p>
+          <p class ="projectlink"> <a href="https://herd-online.appspot.com/" target="=_blank">[Click for Project Details]</a> </p>
           </section>
         </main>
 
-        <br></br>
+        <br><br><br>
 
 <main class="project">
   <a href="https://github.com/FBUAndroidTeam/HelpQ" target="_blank">
     <img src="helpq_logo.png" alt="HelpQ" class="projectpics">
   </a>
     <section class =projectdescrip>
-    <h2> <a href = "https://github.com/FBUAndroidTeam/HelpQ" target="_blank"> HelpQ</a></h2>
+    <h2> HelpQ </h2>
     <p>
       HelpQ is an android app I made with my teammates during my Facebook University for
       Engineering (FBU) internship in the summer of 2019. During the first three weeks
@@ -132,6 +131,7 @@
       CodePath training that FBU Engineering interns experience during the first three weeks of their internships
       by facilitating smoother communication between interns and administrators.
     </p>
+    <p class ="projectlink"> <a href="https://github.com/FBUAndroidTeam/HelpQ" target="=_blank">[Click for Project Details]</a> </p>
   </section>
 </main>
 
@@ -143,7 +143,7 @@
         <br>
         </br>
         <main class ="resume">
-          <h2>Loni Tra</h2>
+          <h2 ID="resumetop">Loni Tra</h2>
           <p class="resumetop">
             425-737-0304 • lonitra@uw.edu • <a href="https://www.linkedin.com/in/lonitra/" target="_blank"> linkedin.com/in/lonitra </a> • <a href="https://github.com/lonitra" target="_blank"> github.com/lonitra </a>
           </p>
