--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </div>
 
         <div ID="links">
-          <a href="https://github.com/lonitra" target="_blank">
+          <a href="https://github.com/lonitra" target="_blank" ID="projects">
             <img src="githublogo.png" class="social"></a>
             <!-- image from http://pngimg.com/download/73390 -->
           <a href="https://www.linkedin.com/in/lonitra/" target="_blank">
