Add link to PDF version of resume

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         <main class="techx">
           <h3>Technical Experience:</h3>
           <p class="education">
-            <strong>Facebook University for Engineering,</strong> <i>Intern</i>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; June 2019 – August 2019
+            <strong>Facebook University for Engineering Intern,</strong> <i>Facebook</i>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;June 2019 – August 2019
           </p>
           <p class="eduindent">
             o	Participated in Android mobile development training building four different apps in three weeks, including apps like Twitter and Instagram
@@ -198,7 +198,7 @@
             o	Designed features and UI flow that would best resolve Facebook University training communication 	issues the app aimed to solve
           </p>
           <p class="education">
-            <strong>AccessMap,</strong> <i> Student Researcher </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2018 – March 2019
+            <strong>Student Researcher,</strong> <i> AccessMap </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2018 – March 2019
           </p>
           <p class="eduindent">
             o	Collected, filtered, and visualized longitude/latitude/altitude data using emTripLog app,
@@ -208,7 +208,7 @@
             o	Analyzed GPS data to strategize to improve accuracy of elevation estimates
           </p>
           <p class="education">
-            <strong>Google Computer Science Summer Institute,</strong> <i> Participant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; July 2017 – August 2017
+            <strong>Computer Science Summer Institute,</strong> <i> Google </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;July 2017 – August 2017
           </p>
           <p class="eduindent">
             o	Selected to participate in an intensive programming institute learning web app
@@ -278,7 +278,7 @@
         <main class="additionx">
           <h3>Additional Experience:</h3>
           <p class="education">
-            <strong>University of Washington,</strong> <i> CSE 190Z Teaching Assistant </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; September 2019 – March 2020
+            <strong>CSE 190Z Teaching Assistant,</strong> <i> Paul G. Allen School of Computer Science </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;September 2019 – March 2020
           </p>
           <p class="eduindent">
             o	Facilitate weekly office hour to aid students in understanding basic programming concepts
@@ -290,7 +290,7 @@
             o	Evaluate student work to provide constructive feedback for improvement in student understanding
           </p>
           <p class="education">
-            <strong>University of Washington,</strong> <i> Engineering Peer Educator </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; April 2018 – December 2018
+            <strong>Engineering Peer Educator,</strong> <i> University of Washington College of Engineering </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; April 2018 – December 2018
           </p>
           <p class="eduindent">
             o	Collaborated with three other peers to develop an entire quarter’s worth of curriculum and activities that would best aid incoming freshmen
@@ -301,6 +301,8 @@
           <p class="eduindent">
             o	Facilitated a classroom of 20 students in studying engineering and its interdisciplinary nature
           </p>
+          <br><br>
+          <p class ="projectlink"> <a href="Resume.pdf" target="_blank">[Click for PDF Version]</a> </p>
         </main>
 
         <br></br>
