Update about me

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             where I have cultivated a strong sense of belonging & support within this big university and built a strong foundation and understanding of my own learning process.
           </p>
           <p class="abme">
-            This spring, I will be joining Microsoft as a Software Engineer intern on the C&AI team where I will have my first experience dabbling
+            This spring, I will be joining Microsoft as a Software Engineer intern on the DevDiv team where I will have my first experience dabbling
             in large systems and learning to ship quality code. In the summer I will be returning to Facebook
             where I will continue to grow as an aspiring software engineer. &#9787;
           </p>
