--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
             <strong>CSE 190Z Teaching Assistant,</strong> <i> Paul G. Allen School of Computer Science </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;September 2019 – March 2020
           </p>
           <p class="eduindent">
-            o	Facilitate weekly office hour to aid students in understanding basic programming concepts
+            o	Facilitated weekly office hour to aid students in understanding basic programming concepts
           </p>
           <p class="eduindent">
-            o	Review and critique lesson plans and assignments to achieve an effective intro CSE curriculum
+            o	Reviewed and critiqued lesson plans and assignments to achieve an effective intro CSE curriculum
           </p>
           <p class="eduindent">
-            o	Evaluate student work to provide constructive feedback for improvement in student understanding
+            o	Evaluated student work to provide constructive feedback for improvement in student understanding
           </p>
           <p class="education">
             <strong>Engineering Peer Educator,</strong> <i> University of Washington College of Engineering </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; April 2018 – December 2018
