--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
         <main class ="techskills">
           <h3>Technical Skills:</h3>
-          <p class="education"> o	<strong>Languages:</strong> Java (proficient), Python (familiar), JavaScript (familiar), HTML/CSS (familiar)
+          <p class="education"> o	<strong>Languages:</strong> Java (proficient), C# (familiar), Python (familiar), JavaScript (familiar), HTML/CSS (familiar)
           </p>
         </main>
 
@@ -184,6 +184,15 @@
 
         <main class="techx">
           <h3>Technical Experience:</h3>
+          <p class="education">
+            <strong>Software Engineer Intern,</strong> <i> Microsoft </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;April 2020 – Present
+          </p>
+          <p class="eduindent">
+            o	Leverage teammates in learning and adapting to team operations and codebase under remote 	circumstances
+          </p>
+          <p class="eduindent">
+            o Responsible for implementing and shipping new property onto an existing Windows Forms control
+          </p>
           <p class="education">
             <strong>Facebook University for Engineering Intern,</strong> <i>Facebook</i>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;June 2019 – August 2019
           </p>
@@ -195,16 +204,6 @@
           </p>
           <p class="eduindent">
             o	Designed features and UI flow that would best resolve Facebook University training communication 	issues the app aimed to solve
-          </p>
-          <p class="education">
-            <strong>Student Researcher,</strong> <i> AccessMap </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp; October 2018 – March 2019
-          </p>
-          <p class="eduindent">
-            o	Collected, filtered, and visualized longitude/latitude/altitude data using emTripLog app,
-            Python, and QGIS
-          </p>
-          <p class="eduindent">
-            o	Analyzed GPS data to strategize to improve accuracy of elevation estimates
           </p>
           <p class="education">
             <strong>Computer Science Summer Institute,</strong> <i> Google </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;July 2017 – August 2017
@@ -280,7 +279,7 @@
             <strong>CSE 190Z Teaching Assistant,</strong> <i> Paul G. Allen School of Computer Science </i> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;September 2019 – March 2020
           </p>
           <p class="eduindent">
-            o	Facilitated weekly office hour to aid students in understanding basic programming concepts
+            o Facilitated weekly office hour and 1-1s to aid students in understanding basic programming concepts
           </p>
           <p class="eduindent">
             o	Reviewed and critiqued lesson plans and assignments to achieve an effective intro CSE curriculum
